:arrow_up: upgrade grpc-java to 1.75 & go dependcities